fix responsive issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,13 @@ a {
   text-decoration: none; }
 
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 100vw; }
   .header__container {
     background-color: rgba(255, 255, 255, 0.8);
-    position: absolute;
-    top: 42.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     width: 60%; }
   .header__headline {
@@ -197,7 +196,7 @@ a {
 
 .footer {
   display: inline-flex;
-  align-content: center;
+  align-items: center;
   margin: 3em; }
   .footer__logo {
     width: 3.5em;
@@ -216,6 +215,13 @@ a {
 
 @media only screen and (max-width: 525px) {
   .container {
-    grid-template-columns: repeat(auto-fit, minmax(40em, 1fr)); } }
+    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr)); }
+
+  .header__headline {
+    font-size: 4.5em; }
+  .header__buttons {
+    display: block; }
+    .header__buttons .btn:not(:last-child) {
+      margin-bottom: 1em; } }
 
 /*# sourceMappingURL=main.css.map */
