--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     display: inline-flex;
-    align-content: center;
+    align-items: center;
     margin: 3em;
     
     &__logo {
