--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,12 @@
 .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 100vw;
     
     &__container {
         background-color: rgba(255, 255, 255, .8);
-        position: absolute;
-        top: 42.5%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         text-align: center;
         width: 60%;
     }
